@@ -25,6 +25,9 @@ NEW FEATURES
     o   The readDOC() reader function can now be configured (via the
         AntiwordOptions argument).
 
+    o   Sources now can be vectorized. This allows faster corpus
+        construction.
+
                 CHANGES IN tm VERSION 0.3-3
 
 NEW FEATURES
