@@ -1,3 +1,7 @@
+2009-03-22  Ingo Feinerer  <feinerer@logic.at>
+
+	* R/source.R (Source): New slot Vectorized.
+
 2009-03-21  Ingo Feinerer  <feinerer@logic.at>
 
 	* R/reader.R (readCustom): Experimental reader which can be
